--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.8
+  xml: ^4.3.0
   http: ^0.12.2
   splashscreen: ^1.2.0
   flutter:
