Added _getID and registerDevice methods to Auth class

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  device_info: ^0.4.2+4
   shared_preferences: ^0.5.8
   xml: ^4.3.0
   http: ^0.12.2
