File now pops up when using the share sheet on Android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  modal_bottom_sheet: ^0.2.0+1
+  receive_sharing_intent: ^1.4.0+2
+  image_picker: ^0.6.7+4
   pin_entry_text_field: ^0.1.4
   flushbar: ^1.10.4
   pinput: ^0.2.4
