Changed app name and app icon for iOS and Android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="app.flutter.ehidrive">
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-  <application android:name="io.flutter.app.FlutterApplication" android:label="ehidrive" android:icon="@mipmap/launcher_icon">
+  <application android:name="io.flutter.app.FlutterApplication" android:label="EHI Drive" android:icon="@mipmap/launcher_icon">
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
 
       <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme" />
