--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/ehidrive-logo.png"
+  image_path: "assets/ehidrive-logo-cropped.png"
 
 flutter:
 
