--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  device_preview: ^0.4.7
   image_cropper: ^1.3.0
   flutter_launcher_icons: ^0.7.5
   flutter_bloc: ^6.0.1
@@ -23,6 +24,8 @@ dependencies:
   http: ^0.12.2
   splashscreen: ^1.2.0
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
