--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  file_picker: ^1.13.3
   device_preview: ^0.4.8
   image_cropper: ^1.3.0
   flutter_launcher_icons: ^0.7.5
@@ -19,7 +20,6 @@ dependencies:
   flushbar: ^1.10.4
   pinput: ^0.2.4
   device_info: ^0.4.2+4
-  shared_preferences: ^0.5.8
   xml: ^4.1.0
   http: ^0.12.2
   splashscreen: ^1.2.0
