Removed Share Intent dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
   flutter_bloc: ^6.0.1
   modal_bottom_sheet: ^0.2.0+1
-  receive_sharing_intent: ^1.4.0+2
+  # receive_sharing_intent: ^1.4.0+2
   pin_entry_text_field: ^0.1.4
   flushbar: ^1.10.4
   pinput: ^0.2.4
